# FilterOpticalFlow

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EstimateVelocity.cpp  EstimateVelocity.h  FilterOpticalFlow.cbp  Makefile  README.txt  cmake_install.cmake  main.cpp  package.xml  sample_data.txt
include/eskf/: eskf.h
include/estimate_velocity/: estimate_velocity.h  undistorter.h
launch/: filter_optical_flow.launch
matlab/ESKF/: ESKF.m  ESKF.m~  estimate_vel_research.m  generate_test_data.m  ground_truth.m  ground_truth.m~  test_research.m  test_research.m~
src/: eskf.cpp  estimate_velocity.cpp  filter_optical_flow_node.cpp  main.cpp  undistorter.cpp
