<?xml version="1.0"?>

<package format="2">

  <name>filter_optical_flow</name>	
  <version>0.0.1</version>
  <description>
	This package estimate pose and through optical flow
  </description>
  <maintainer email="yibochen@seas.upenn.edu">Yibo Chen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>rosbag</depend>
  <depend>image_transport</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>msckf_vio</depend>

  <export>
   
  </export>

</package>	